rework contact mime type settings
- move selected-contact-mime-types right after enable-contacts
- use more default preferences
- make selected-contact-mime-types dependent on enable-contacts
- cleanup programmatically settings code

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -400,6 +400,11 @@
             android:defaultValue="true"
             android:key="enable-contacts"
             android:title="@string/contacts_name" />
+        <MultiSelectListPreference
+            android:defaultValue="@array/contactMimeTypesDefault"
+            android:dependency="enable-contacts"
+            android:key="selected-contact-mime-types"
+            android:title="@string/contact_mime_types_title" />
         <fr.neamar.kiss.preference.SwitchPreference
             android:defaultValue="true"
             android:key="enable-settings"
