--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -20,11 +20,26 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
+        android:layout_marginStart="@dimen/icon_margin_left"
+        android:layout_marginLeft="@dimen/icon_margin_left"
+        android:layout_marginTop="@dimen/icon_margin_top"
         android:layout_marginEnd="@dimen/icon_margin_right"
         android:layout_marginRight="@dimen/icon_margin_right"
+        android:layout_marginBottom="@dimen/icon_margin_bottom"
         android:importantForAccessibility="no"
         android:src="@drawable/ic_contact"
         tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/item_app_icon"
+        android:layout_width="?attr/resultSubIconSize"
+        android:layout_height="?attr/resultSubIconSize"
+        android:layout_alignEnd="@id/item_contact_icon"
+        android:layout_alignRight="@id/item_contact_icon"
+        android:layout_alignBottom="@id/item_contact_icon"
+        android:layout_gravity="end|bottom"
+        android:contentDescription="@null"
+        tools:src="@drawable/ic_launcher" />
 
     <TextView
         android:id="@+id/item_contact_name"
@@ -94,6 +109,7 @@
         android:id="@+id/item_contact_action_message"
         android:layout_width="48dp"
         android:layout_height="?attr/resultButtonHeight"
+        android:layout_alignWithParentIfMissing="true"
         android:layout_centerVertical="true"
         android:layout_toStartOf="@+id/item_contact_action_phone"
         android:layout_toLeftOf="@+id/item_contact_action_phone"
